7144318: GCLocker assert failure: assert(_needs_gc || SafepointSynchronize::is_at_safepoint(

Reviewed-by: kvn, twisti